@@ -521,7 +521,7 @@ name|BlockBalanceThrottler
 argument_list|(
 name|conf
 operator|.
-name|getLong
+name|getLongBytes
 argument_list|(
 name|DFSConfigKeys
 operator|.
